# qs

./: .gitignore  .justfile  4up.py  Makefile  Manifest.txt  README.md  booklet.py  create_app.py  deploy.py  fabfile.py  kill  load_apps.py  models.py  pdftiny.py  pyproject.toml  qrcode.py  requirements.txt  start  stop  uwsgi.ini  uwsgi.j2
.github/workflows/: python-package.yml
release/: booklet.py  index.html  kill  requirements.txt  start  stop  uwsgi.ini  wsgi.py
release/html-pages/: bsars.html
release/md-pages/: test.md
release/static/css/: styles.css
release/templates/: base.html  basepage-layoutit.html  booklet_form.html  markdown.html  markdown_page.html
src/: app.py  release.py  was_release.py
src/qs/: __init__.py  create_wsgi.py  deploy.py  models.py  new_app.py  opalsync.py  version.py
src/qs/templates/: base_template  basepage-layoutit.html  kill  qrcode_form.html  start  stop  uwsgi.ini
src/templates/: form.html
templates/: base.html  booklet_form.html  markdown.html
tests/: conftest.py  test_create_wsgi.py  test_deploy.py  test_models.py  test_new_app.py  test_opalsync.py  test_templates.py  test_uuid_repr.py  test_version.py
