[project]
name = "qs"
version = "0.3.7"
description = "Site deployment for Opalstack wsgi sites"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "fabric>=3.2.2", "hu>=0.9.0", "jinja2>=3.1.6", "mongoengine>=0.29.1", "opalstack>=1.0.3", "semver>=3.0.4", "toml>=0.10.2",]

[project.scripts]
deploy = "qs:deploy"
opalsync = "qs.opalsync:main"
new_app = "qs.new_app:main"

[tool.uv]
package = true

[tool.uv-build]
include = [ "src/qs",]
