[project]
name = "qs"
version = "0.4.1"
description = "Site deployment for Opalstack wsgi sites"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "fabric>=3.2.2", "hu>=0.9.0", "jinja2>=3.1.6", "mongoengine>=0.29.1", "opalstack>=1.0.3", "qrcode>=8.2", "semver>=3.0.4", "toml>=0.10.2",]

[build-system]
requires = [ "uv_build>=0.8.4,<0.9.0",]
build-backend = "uv_build"

[project.scripts]
deploy = "qs:deploy_cli"
opalsync = "qs.opalsync:main"
new_app = "qs.new_app:main"
create_wsgi = "qs.create_wsgi:main"

[tool.uv.build-backend]
module-root = "src"
